// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Login page Should be filled form 1`] = `
<body>
  <div>
    <div
      class="MuiBox-root css-rxpc3a"
      data-testid="loginContainer"
    >
      <div
        class="cardComp css-p1o44d"
      >
        <input
          class="inputComp css-lfv6wx"
          data-testid="username"
          name="username"
          placeholder="Email"
        />
        <input
          class="inputComp css-lfv6wx"
          data-testid="password"
          name="password"
          placeholder="Senha"
          type="password"
        />
        <button
          class="MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButtonBase-root buttonComp css-16hy5k1-MuiButtonBase-root-MuiButton-root"
          data-testid="button-login"
          mycolor="blue"
          tabindex="0"
          type="button"
        >
          Entrar
          <span
            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
  </div>
</body>
`;

exports[`Login page Should be render correctly 1`] = `
<body>
  <div>
    <div
      class="MuiBox-root css-rxpc3a"
      data-testid="loginContainer"
    >
      <div
        class="cardComp css-p1o44d"
      >
        <input
          class="inputComp css-lfv6wx"
          data-testid="username"
          name="username"
          placeholder="Email"
        />
        <input
          class="inputComp css-lfv6wx"
          data-testid="password"
          name="password"
          placeholder="Senha"
          type="password"
        />
        <button
          class="MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButtonBase-root Mui-disabled buttonComp css-1lf06eb-MuiButtonBase-root-MuiButton-root"
          data-testid="button-login"
          disabled=""
          mycolor="blue"
          tabindex="-1"
          type="button"
        >
          Entrar
        </button>
      </div>
    </div>
  </div>
</body>
`;

exports[`Login page Should be render warning message 1`] = `
<body>
  <div>
    <div
      class="MuiBox-root css-rxpc3a"
      data-testid="loginContainer"
    >
      <div
        class="cardComp css-p1o44d"
      >
        <input
          class="inputComp css-lfv6wx"
          data-testid="username"
          name="username"
          placeholder="Email"
        />
        <input
          class="inputComp css-lfv6wx"
          data-testid="password"
          name="password"
          placeholder="Senha"
          type="password"
        />
        <button
          class="MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButtonBase-root Mui-disabled buttonComp css-1lf06eb-MuiButtonBase-root-MuiButton-root"
          data-testid="button-login"
          disabled=""
          mycolor="blue"
          tabindex="-1"
          type="button"
        >
          Entrar
        </button>
        <div
          class="MuiBox-root css-1n6ef1d"
        >
          <div
            class="MuiBox-root css-awihxo"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-colorError MuiSvgIcon-fontSizeMedium css-1wxstni-MuiSvgIcon-root"
              data-testid="ErrorOutlineIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M11 15h2v2h-2zm0-8h2v6h-2zm.99-5C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
              />
            </svg>
          </div>
          <div
            class="MuiBox-root css-1rfflxv"
          >
            <p
              class="MuiTypography-root MuiTypography-body1 css-e07vag-MuiTypography-root"
            >
              Tente novamente
            </p>
            <p
              class="MuiTypography-root MuiTypography-body1 css-8q6oao-MuiTypography-root"
            >
              Email ou senha inválido!
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;
